Fixed extra scrollbar from UI, animate main view scroll

--- a/demo-polymer-elements/src/main/webapp/VAADIN/themes/polymer-demo/styles.css
+++ b/demo-polymer-elements/src/main/webapp/VAADIN/themes/polymer-demo/styles.css
@@ -1,6 +1,8 @@
 @import 'mainpage.css';
 @import 'button.css';
 
+body { overflow: hidden; }
+
 body:not([style-scope]):not(.style-scope) {
     font-family: 'Roboto', 'Noto', sans-serif;
     font-size: 14px;
